# pbce

./: .gitignore  LICENSE.md  README.md
.github/workflows/: test_server.yml
app/: README.md  package-lock.json  package.json  tsconfig.json
app/src/: manifest.json
app/src/components/App/: App.test.tsx  App.tsx
client/: package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: index.tsx  testUtils.tsx
client/src/api/: endpoints.ts  errors.ts  index.ts  instance.ts
client/src/components/: index.ts
client/src/components/App/: App.test.tsx  App.tsx
client/src/components/CodeEditor/: CodeEditor.test.tsx  CodeEditor.tsx  utils.ts
client/src/components/DisassembleResults/: DisassembleResults.test.tsx  DisassembleResults.tsx  index.ts
client/src/components/MainPanel/: MainPanel.test.tsx  MainPanel.tsx
client/src/components/SelectVersions/: SelectVersions.test.tsx  SelectVersions.tsx  index.ts
client/src/store/: hooks.ts  store.ts
client/src/store/slices/: instructions.ts  selectedVersions.ts  versions.ts
client/src/strings/: index.ts  strings-en.json
server/: .coveragerc  .dockerignore  .flake8  .pyversions  Dockerfile  pyproject.toml
server/pbce_server/: disassemble.py  main.py  models.py  pyversions.py  request.py  routes.py  server.py
server/scripts/: all_python_install.sh  run_tests.sh
server/test/: test_disassemble.py  test_request.py  test_routes.py  test_server.py
