[tool.poetry]
name = "pbce_server"
version = "0.1.0"
description = ""
authors = ["lkk7 <lukaszlapinski7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = "^1.10.2"
starlette = "^0.20.4"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-import-order = "^0.18.1"
mypy = "^0.971"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
