[tool.poetry]
authors = ["lkk7 <lukaszlapinski7@gmail.com>"]
description = ""
license = "MIT"
name = "pbce_server"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.10.2"
python = "^3.10"
starlette = "^0.20.4"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"
coverage = "^6.4.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-import-order = "^0.18.1"
mypy = "^0.971"


[tool.pytest.ini_options]
markers = [
    "asyncio: mark that a test uses asyncio",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.0"]
